# notes

c-cpp-detect/: bound.md  cwe170.md  std_string.md  unsigned-wrap.md
c-detect/: cwe170.md  defined-not-used.md
database/: mysqltype.md  pg_dump.md  settings5.7.ini  settings8.0.ini  sql.md
git/: assume-unchanged.md  base.md  branch-tag.md  branch.md  branch.txt  github.action.md  ssh-remote.md  submodule.md
linux/: base.md  centos.md  collection-of-cmds.md  coredump.md  fhs.txt  format-explain.txt  fstab-mount.md  group-user.md  manjaro21.md  modify-swapfile.md  pip3venv.md  port.md  printf.md  samba.md  shared-object.md  shellcutstring.md  trapfind.md  ubuntu20.04.md  zstd.md
linux/arch/: flushdns.md  manjaro21.md  pacman-command.md
linux/nixos/: base.md
linux/singly/: CMakeLists.txt  main.c  singlyLinkedList.c  singlyLinkedList.h
manjaro/: clone-diskpart.md  mhwd-kernel.md  pacman-command.md
nix/: nixos-install-guide.md  os.md  programs.md  remote-nixos-deploy.md  repl-eval.md  wsl.md
other/: barrier-client-autostart.md  php-command.md  user-cfg-dir.md  utf-with-bom.md  vscode-server.md  zerotier.md
python/: pip_mirror.txt
qt/: compileqtKylin.md  gcc-no-pie.txt  pro.md  transparent-Tab-qss.css
qt&go-opensource-project/: open-qml.md  open-qt.md
redhat/: centos-samba.md
shell-packagedeb/: debfiles-ergod-pkg.sh  folder-ergod-pkg.sh  inessential-debs.txt  libcompileqt.list  major.list  make-offline_sed.sh  pre.list  recommond-debs.txt  sources.list
win10/: NoLsp_fix_WSL2.reg  batch.md  osg.md  powershell.md  preferrence.md  wsl.md
(+1 files in other folders)
